# pica-drive

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: CMakeLists.txt  bldc.h  motor.h
include/config/: motor.h
include/motor/: current_controller.h
include/motor/bldc/: foc.h
include/private/: math.h  math.hpp
ports/: drive_conf.h  hrt.h
src/: CMakeLists.txt  motor.hpp
src/bldc/: bldc.cc  bldc.hpp  config_manager.hpp  current_controller_variant.hpp  openloop_controller.hpp  park.h  speed_controller_variant.hpp  svpwm.c  svpwm.h
src/bldc/current_controller/: current_controller.hpp  current_controller_foc.cc  current_controller_foc.hpp  phase_inductance_measurer.cc  phase_inductance_measurer.hpp  phase_resistance_measurer.cc  phase_resistance_measurer.hpp
src/bldc/speed_controller/: speed_controller.hpp  speed_controller_pi.cc  speed_controller_pi.hpp
src/interface/: motor.hpp
src/motor/: bldc.hpp  config.c  config.cc  config.h  config.hpp  current_controller.h  current_controller.hpp  motor.c  speed_controller.hpp
src/motor/bldc/: bldc.c  bldc.cc  current_controller_foc.cc  current_controller_foc.hpp  foc.c  foc.cc  foc.h  foc.hpp  speed_controller_pi.cc  speed_controller_pi.hpp
src/motor/common/: abc.h  alpha_beta.h  dq.h
src/motor/park/: park.h
src/motor/pwm/: svm.c  svm.h
src/trajectory_planning/: CMakeLists.txt  math.hpp  planner_variant.hpp  trajectory_planner.hpp  velocity_smoothing.hpp  velocity_trapezoidal.cpp  velocity_trapezoidal.hpp  velocity_trapezoidal_test.cpp
src/utils/: bits.h  math.h  noncopyable.hpp  singleton.hpp
tests/: CMakeLists.txt  hrt_conf.h  test_bldc_current_foc.cc  test_bldc_foc.cc  test_bldc_speed_pi.cc
third/: CMakeLists.txt
third/loguru/: CMakeLists.txt
third/matplotlib-cpp/: CMakeLists.txt  matplotlib_test.cpp  matplotlibcpp.h
utils/: CMakeLists.txt
utils/trajectory_planning/: CMakeLists.txt  trajectory_planner.hpp  velocity_trapezoidal.cpp  velocity_trapezoidal.hpp
